update homepage message

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Titanic Predictor</title>
   </head>
   <body>
-    <h1>It's working</h1>
+    <h1>This is an update to check if Github changes are working</h1>
     <!-- <a href="{% url 'result' %}">Click to go to results</a> -->
     <br>
     <h1>Get your Titanic Prediction here</h1>
