testing VS Code git terminal

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <button type="button" onclick="clicked()">Button</button>
     <!-- <a href="{% url 'result' %}">Click to go to results</a> -->
     <br>
-    <h1>Get your Titanic Prediction here</h1>
+    <h1>Updated Titanic Prediction Website</h1>
     <p>Enter details of a fictional passenger</p>
     <p>We will output a prediction</p>
 
