--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1>This is an update to check if Github changes are working</h1>
+    <h1>Need to fix styling</h1>
     <button type="button" onclick="clicked()">Button</button>
     <!-- <a href="{% url 'result' %}">Click to go to results</a> -->
     <br>
-    <h1>Updated Titanic Prediction Website</h1>
+    <h1>Titanic Prediction Website</h1>
     <p>Enter details of a fictional passenger</p>
     <p>We will output a prediction</p>
 
