--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Need to fix styling</h1>
+    <h1>Add bootstrap next</h1>
     <button type="button" onclick="clicked()">Button</button>
     <!-- <a href="{% url 'result' %}">Click to go to results</a> -->
     <br>
