--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
 body {
-    background-color: beige;
+    background-color: lightblue;
+}
+
+h1 {
+    font-size: large;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    color: crimson;
 }
