--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,17 @@
 body {
-    background-color: lightblue;
+    background-color: lightgreen;
 }
 
 h1 {
     font-size: x-large;
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
-    color: crimson;
+    color: blue;
 }
 
 p {
     font-size: medium;
     font-style: bold;
     font-family: Arial, Helvetica, sans-serif;
-    color: purple;
+    color: crimson;
 }
