--- a/static/style.css
+++ b/static/style.css
@@ -15,3 +15,10 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     color: crimson;
 }
+
+.inputForm {
+    font-size: large;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+    color: purple;
+}
