--- a/templates/index.html
+++ b/templates/index.html
@@ -5,38 +5,149 @@
     <meta charset="utf-8">
     <title>Titanic Predictor</title>
     {% load static %}
-    <!-- <link rel="stylesheet" href="{% static 'style.css' %}"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
-    <h1>Launching website locally</h1>
-    <button type="button" onclick="clicked()">Button</button>
+    <!-- <h1>Launching website locally</h1> -->
+    <!-- <button type="button" onclick="clicked()">Button</button> -->
     <!-- <a href="{% url 'result' %}">Click to go to results</a> -->
-    <br>
+
     <h1>Titanic Prediction Website</h1>
-    <p>Enter details of a fictional passenger</p>
-    <p>We will output a prediction</p>
+    <p>Enter details of a fictional passenger and we will output a prediction</p>
 
     <form action="{% url 'result' %}">
         {%csrf_token%}
-        <p>pclass</p>
-        <input type="text" name="pclass">
-        <p>sex</p>
-        <input type="text" name="sex">
-        <p>age</p>
-        <input type="text" name="age">
-        <p>sibsp</p>
-        <input type="text" name="sibsp">
-        <p>parent/child</p>
-        <input type="text" name="parch">
-        <p>fare</p>
-        <input type="text" name="fare">
-        <p>embarked</p>
-        <input type="text" name="embarked">
-        <p>title</p>
-        <input type="text" name="title">
-        <input type="submit">
+
+        <div class="inputForm">
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label">Ticket Class</label>
+                <div class="col-sm-2">
+                    <input type="text" readonly class="form-control-plaintext" value="1 = 1st, 2 = 2nd, 3 = 3rd">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="pclass">
+                </div>
+            </div>
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label">Gender</label>
+                <div class="col-sm-2">
+                    <input type="text" readonly class="form-control-plaintext" value="0 = Male, 1 = Female">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="sex">
+                </div>
+            </div>
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label">Age</label>
+                <div class="col-sm-2">
+                    <input type="text" readonly class="form-control-plaintext" value="Enter Age from 1-70">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="age">
+                </div>
+            </div>
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"># of siblings/spouses aboard</label>
+                <div class="col-sm-2">
+                    <input type="text" readonly class="form-control-plaintext" value="Enter Value from 1-20">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="sibsp">
+                </div>
+            </div>
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"># of parents/children aboard</label>
+                <div class="col-sm-2">
+                    <input type="text" readonly class="form-control-plaintext" value="Enter Value from 1-20">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="parch">
+                </div>
+            </div>
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label">Passenger Fare</label>
+                <div class="col-sm-2">
+                    <input type="text" readonly class="form-control-plaintext" value="Enter Value from 1-1000">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="fare">
+                </div>
+            </div>
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label">Port of Embarkation</label>
+                <div class="col-sm-5">
+                    <input type="text" readonly class="form-control-plaintext" value="1 = Cherbourg, 2 = Queenstown, 0 = Southampton">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="embarked">
+                </div>
+            </div>
+
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label">Title</label>
+                <div class="col-sm-5">
+                    <input type="text" readonly class="form-control-plaintext" value="Mr= 0,Miss= 1,Mrs= 2,Master= 3,Dr= 4,Rev= 5,Officer= 6,Royalty= 7">
+                </div>
+            </div>
+            <div class="mb-1 row">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" name="title">
+                </div>
+            </div>
+
+            <input type="submit">
+
+
+        </div>
+        <!-- <p>pclass</p> -->
+        <!-- <input type="text" name="pclass"> -->
+        <!-- <p>sex</p>
+            <input type="text" name="sex">
+            <p>age</p>
+            <input type="text" name="age">
+            <p>sibsp</p>
+            <input type="text" name="sibsp">
+            <p>parent/child</p>
+            <input type="text" name="parch">
+            <p>fare</p>
+            <input type="text" name="fare">
+            <p>embarked</p>
+            <input type="text" name="embarked">
+            <p>title</p>
+            <input type="text" name="title">
+            <input type="submit"> -->
+
     </form>
     <script type="text/javascript" src="{% static 'main.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
