checking vim update via aws ssh

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <!-- <button type="button" onclick="clicked()">Button</button> -->
     <!-- <a href="{% url 'result' %}">Click to go to results</a> -->
 
-    <h1>Titanic Prediction Website</h1>
+    <h1>Titanic Prediction Website: Updated via VIM using AWS ssh </h1>
     <p>Enter details of a fictional passenger and we will output a prediction</p>
 
     <form action="{% url 'result' %}">
