--- a/static/style.css
+++ b/static/style.css
@@ -1,24 +1,67 @@
 body {
-    background-color: lightgreen;
+    background: url(../static/images/background.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.send-button {
+    background: #54C7C3;
+    width: 100%;
+    font-weight: 600;
+    color: #fff;
+    padding: 8px 25px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 1;
+}
+
+.my-input {
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    cursor: text;
+    padding: 8px 10px;
+    transition: border .1s linear;
+    margin-bottom: 10px;
+}
+
+.header-title {
+    margin: 5rem 0;
 }
 
 h1 {
-    font-size: x-large;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-    color: blue;
+    font-size: 31px;
+    line-height: 40px;
+    font-weight: 600;
+    color: black;
 }
 
-p {
-    font-size: medium;
-    font-style: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    color: crimson;
+h2 {
+    color: black;
+    font-size: 21px;
+    line-height: 20px;
+    font-weight: 400;
 }
 
-.inputForm {
-    font-size: large;
-    font-weight: 500;
-    font-family: Arial, Helvetica, sans-serif;
-    color: purple;
+.span-or {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -2px;
+    margin-left: -25px;
+    background-color: #fff;
+    width: 50px;
+    text-align: center;
+}
+
+@media screen and (max-width:480px) {
+    h1 {
+        font-size: 26px;
+    }
+    h2 {
+        font-size: 20px;
+    }
 }
