--- a/templates/result.html
+++ b/templates/result.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>result</title>
+     {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
-    <h1>result</h1>
-    <a href="{% url 'home' %}">Click to go to home</a>
-    <p>Results is:</p>
-    <p>{{prediction}}</p>
+    <div class="container">
+            <div class="col-md-6 mx-auto text-center">
+                <div class="header-title">
+                <br><br><br><br><br><br><br><br>
+                    <h1 class="display-1">
+                        Results:
+                    </h1>
+                    <h3 class="display-4">{{prediction}}</h3>
+                    <h2 class="wv-heading--subtitle">
+                    <a href="{% url 'home' %}">Run another prediction</a>
+                    </h2>
+                </div>
+             </div>
+     </div>               
+    
+    <!--<<p>{{prediction}}</p>> -->
   </body>
 </html>
