--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
     <!-- <h1>Launching website locally</h1>
     <button type="button" onclick="clicked()">Button</button> -->
-    <!-- <a href="{% url 'result' %}">Click to go to results</a> -->
+    <a href="{% url 'titanic' %}">Click to go to Titanic Predictor</a>
 
     <!-- <h1>Titanic Prediction Website: Updated via VIM using AWS ssh </h1>
     <p>Enter details of a fictional passenger and we will output a prediction</p> -->
